# pix-veil

./: .gitignore  LICENSE  README.md  deno.json  dump-to-clipboard.sh  jest.config.js  package.json  tsconfig.json
.github/workflows/: deno.yml
.hooks/: pre-commit
image_processor/: Cargo.toml
image_processor/pkg/: image_processor.d.ts  image_processor.js  image_processor_bg.wasm  image_processor_bg.wasm.d.ts
image_processor/src/: lib.rs
pre-commit/: .pre-commit
src/: cli.ts  config.ts  constants.ts  decoder.ts  encoder.ts  index.ts
src/@types/: chunkingStrategy.ts  codec.ts  codecOptions.ts  compressionStrategy.ts  distribution.ts  distributionMap.ts  encryptionStrategy.ts  image.ts  index.ts  logging.ts  mapSchema.ts  processing.ts  types.ts
src/cli/: batchProcess.demo.ts  index.ts
src/config/: index.ts
src/constants/: MagicBytes.ts
src/core/chunking/: ToneAndCapacityChunkDistributor.ts  assembleChunks.ts  distributeChunks.ts  splitChunks.ts
src/core/decoder/: index.ts  stateMachine.ts
src/decoder/: decode.ts
src/encoder/: encode.ts
src/modules/: decoder.ts  encoder.ts
src/stateMachine/: AbstractStateMachine.ts  definedStates.ts
src/utils/: Logger.ts  bitUtils.ts  compression.ts  cryptoUtils.ts  encryption.ts  fileUtils.ts  imageUtils.ts  mapHelpers.ts  mapUtils.ts  steganography.ts  storageUtils.ts
tests/: bitManipulation.test.ts  codec.test.ts  debugBlocks.test.ts  disposable.test.ts  distributionMap.test.ts  encoder.test.ts  imageHandling.test.ts  imageUtils.test.ts  utilityFunctions.test.ts
tests/helpers/: mockLogger.ts
(+69 files in other folders)
