[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.4" # Ensure you have the latest version
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.72"
wee_alloc = "0.4.5"
